# should-color

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  header.html
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: colored.rs  debug.rs  termcolor.rs
src/: lib.rs
tests/: resolve.rs
