[package]
name = "should-color"
version = "0.2.1"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Determine whether output should use colors or not."
license = "MIT"
repository = "https://github.com/FedericoStra/should-color"
categories = ["command-line-interface"]
keywords = ["cli", "color", "clicolor", "no_color", "terminal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["no_color", "clicolor", "clicolor_force"]
no_color = []
clicolor = []
clicolor_force = []

[dependencies]

[dev-dependencies]
itertools = "0.10.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "header.html"]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
